# Jinx

./: .gitignore  AGENTS.md  BENCHMARK_RESULTS.md  Dockerfile  Modelfile  README.md  api_server.py  astro.py  benchmark_results.md  call.py  config.py  human_design_calculator.py  learning.py  main.py  pyproject.toml  realworld.py  requirements.txt  test_astro.py
core/: cache.py  llm_compare.py  llm_core.py  memory.py  orchestrator.py  preferences.py
data/: benchmark_cases.json  preferences.json  session_memory.json
data/knowledge/: go.md  (+47 more)
docs/: ARCHITECTURE.md  CONTEXT.md  ROADMAP.md  RULES.md
engines/: execution.py  perception.py  reasoning.py  response.py
scripts/: bazi_reading.py  jinx.py  self_eval.py
templates/: template_ai_project.json  template_content_creator.json  template_data_science.json  template_devops_cloud.json  template_mobile_app.json  template_web_dev.json
tests/: test_bazi.py  test_cache.py  test_data_analysis.py  test_decision_tree.py  test_execution.py  test_file.py  test_file_edge.py  test_format.py  test_html_gen.py  test_integration.py  test_math.py  test_memory.py  test_obsidian.py  test_orchestrator.py  test_perception.py  test_reasoning.py  test_response.py  test_search.py  test_search_error_handling.py  test_state_manager.py  test_vault.py
tools/: arch_generator.py  base.py  bazi.py  data_analysis.py  decision_tree.py  error_handler.py  file.py  html_gen.py  jyotish.py  math.py  name_analysis.py  obsidian.py  person_analyzer.py  search.py  state_flow.py  state_manager.py  synthesis.py  thai_astro.py  utils.py  western_astro.py
(+9 files in other folders)
