[project]
name = "jinx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markdown>=3.7",
    "numpy>=2.0.0",
    "ollama>=0.3.0",
    "rapidfuzz>=3.9.0",
    "requests>=2.32.0",
    "rich>=13.8.0",
    "sympy>=1.13.0",
    "z3-solver>=4.13.0",
]