[project]
name = "jinx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "cnlunar>=0.2.4",
    "dotenv>=0.9.9",
    "groq>=1.4.0",
    "markdown>=3.7",
    "numpy>=2.0.0",
    "ollama>=0.3.0",
    "pyswisseph>=2.10.3.2",
    "pytest>=9.0.3",
    "rapidfuzz>=3.9.0",
    "requests>=2.32.0",
    "rich>=13.8.0",
    "sympy>=1.13.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "z3-solver>=4.13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = []
